--- a/src/app/homeuser/homeuser.component.html
+++ b/src/app/homeuser/homeuser.component.html
@@ -81,8 +81,11 @@
 
 <div class="containBody">
 
-  <div class="horflow">
-    <div class="elem">Welcome new Notification</div>
+  <div *ngIf="notifications !=''" class="horflow">
+    <div class="elem">
+      {{notifications.message}}
+      <span>{{notifications.datesend}}</span>
+    </div>
   </div>
   <br>
 
@@ -107,7 +110,7 @@
                 </div>
               </div>
               <div class="carousel-item" data-bs-interval="2000">
-                <img src="assets/" class="d-block w-100" alt="...">
+                <img src="assets/DSC_9759.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Second slide label</h5>
                   <p>Some representative placeholder content for the second slide.</p>
